chat font issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,9 @@ a {
   font-weight: 700;
   font-display: swap;
 }
+
+@media screen and (max-width: 767px) {
+  input, select, textarea {
+    font-size: 16px!important
+  }
+}
